add paging and websocket logic