@@ -1,22 +1,19 @@
 package com.nikolai.softarex.controllers;
 
 
+import com.nikolai.softarex.dto.PageDto;
 import com.nikolai.softarex.dto.QuestionnaireFieldDto;
-import com.nikolai.softarex.exception.EmailNotFoundException;
+import com.nikolai.softarex.exception.UserNotFoundException;
 import com.nikolai.softarex.interfaces.QuestionnaireFieldService;
+import com.nikolai.softarex.interfaces.QuestionnaireResponseService;
 import com.nikolai.softarex.interfaces.UserService;
 import com.nikolai.softarex.mapper.EntityMapper;
 import com.nikolai.softarex.model.QuestionnaireField;
 import com.nikolai.softarex.model.QuestionnaireResponse;
+import com.nikolai.softarex.util.PageUtil;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.*;
-
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
-import static com.nikolai.softarex.util.ExceptionMessageUtil.emailNotFoundMsg;
 
 
 @RestController
@@ -27,28 +24,34 @@ public class UserController {
 
     private final QuestionnaireFieldService fieldService;
 
+    private final QuestionnaireResponseService responseService;
+
 
     private final EntityMapper<QuestionnaireField, QuestionnaireFieldDto> fieldMapper;
 
     public UserController(UserService userService,
                           QuestionnaireFieldService fieldService,
+                          QuestionnaireResponseService responseService,
                           EntityMapper<QuestionnaireField, QuestionnaireFieldDto> fieldMapper) {
         this.userService = userService;
         this.fieldService = fieldService;
+        this.responseService = responseService;
         this.fieldMapper = fieldMapper;
     }
 
 
-    @RequestMapping(value = "/{email}/addField", method = RequestMethod.POST
-            , consumes = MediaType.APPLICATION_JSON_VALUE
+    @RequestMapping(
+            value = "/{id}/addField",
+            method = RequestMethod.POST,
+            consumes = MediaType.APPLICATION_JSON_VALUE
     )
     @ResponseStatus(HttpStatus.CREATED)
     public Integer addField(
             @RequestBody QuestionnaireFieldDto fieldDto,
-            @PathVariable(value = "email", required = true) String email) {
+            @PathVariable(value = "id", required = true) int userId
+    ) {
 
-        var user = userService.findByEmail(email)
-                .orElseThrow(() -> new EmailNotFoundException(emailNotFoundMsg(email)));
+        var user = userService.findById(userId).orElseThrow(UserNotFoundException::new);
         var field = fieldMapper.convertDtoToEntity(fieldDto);
 
         field.setUser(user);
@@ -57,32 +60,35 @@ public class UserController {
     }
 
 
-    @RequestMapping(value = "/{email}/fields", method = RequestMethod.GET)
+    @RequestMapping(value = "/{id}/fields", method = RequestMethod.GET)
     @ResponseStatus(HttpStatus.OK)
-    public List<QuestionnaireFieldDto> getFields(@PathVariable(value = "email", required = true)
-                                                 String email) {
+    public PageDto<?> getFields(
+            @RequestParam(name = "size", required = false) Integer size,
+            @RequestParam(name = "page", required = false) Integer page,
+            @PathVariable(name = "id", required = true) int userId
+    ) {
+        var pageable = PageUtil.createPage(page, size);
+        var contentWrapper = fieldService.findByUserId(userId, pageable);
+        var fields = contentWrapper.stream().map(fieldMapper::convertEntityToDto).toList();
 
-        var user = userService.findByEmail(email)
-                .orElseThrow(() -> new EmailNotFoundException(emailNotFoundMsg(email)));
 
-        return user.getQuestionnaireFields()
-                .stream()
-                .map(fieldMapper::convertEntityToDto)
-                .collect(Collectors.toList());
+        return new PageDto<>(contentWrapper.getTotalPages(), contentWrapper.getTotalElements() , fields);
     }
 
 
-    @RequestMapping(value = "/{email}/responses", method = RequestMethod.GET)
+    @RequestMapping(value = "/{id}/responses", method = RequestMethod.GET)
     @ResponseStatus(HttpStatus.OK)
-    public Object getResponses(@PathVariable(value = "email", required = true)
-                               String email) {
-        var user = userService.findByEmail(email)
-                .orElseThrow(() -> new EmailNotFoundException(emailNotFoundMsg(email)));
+    public PageDto<?> getResponses(
+            @RequestParam(name = "size", required = false) Integer size,
+            @RequestParam(name = "page", required = false) Integer page,
+            @PathVariable(value = "id", required = true) int userId
+    ) {
 
-        return user.getQuestionnaireResponses()
-                .stream()
-                .map(QuestionnaireResponse::getData)
-                .collect(Collectors.toList());
+        var pageable = PageUtil.createPage(page, size);
+        var contentWrapper = responseService.findByUserId(userId, pageable);
+        var responses = contentWrapper.stream().map(QuestionnaireResponse::getData).toList();
+
+        return new PageDto<>(contentWrapper.getTotalPages(), contentWrapper.getTotalElements() , responses);
     }
 
 
